Added user controller in the frontend to call login and register endpoints, fixed up cors configurations added dummy data for testing authorization flow.